# namedarray

./: README.md  namedarray.py  pyproject.toml
namedarray/: __init__.py  namedarray.py
test/: test_namedarray.py
